# localExtractor

./: CMakeLists.txt
Data/Dynamic_email/: addemail.txt  delemail.txt  email.txt
Data/TestDataset/: test.txt  test1.txt  test2.txt
include/configuration/: config.h  types.h
include/graph/: graph.h  vertex.h
include/localExtractor/: localExtractor.h
include/util/: common.h  edgeReader.h
libsrc/: CMakeLists.txt
libsrc/graph/: graph.cpp  vertex.cpp
libsrc/localExtractor/: localExtractor.cpp
libsrc/util/: common.cpp  edgeReader.cpp
src/: CMakeLists.txt  main.cpp
